# clawcoco

./: CLAUDE.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: run-pytest.yaml
skills/github-collaboration/: SKILL.md
src/clawcoco/: __init__.py  agent.py  config.py  git_utils.py  github_ip.py  session_store.py  webhook.py
src/clawcoco/handlers/: __init__.py  issue_comment.py  issues.py  pull_request.py  pull_request_review.py
src/clawcoco/scripts/: __init__.py  run_claude_agent.py
tests/: conftest.py  test_agent.py  test_github_ip.py  test_session_store.py  test_webhook.py  test_worktree.py
