[project]
name = "clawcoco"
version = "0.1.0"
description = "Claw Code Copliot, work with Openclaw via github, with minimal trust"
readme = "README.md"
authors = [
    { name = "genuine", email = "pkugenuine@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[project.scripts]
clawcoco = "clawcoco:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
